@@ -2,6 +2,9 @@ Cascading Change Log
 
 unreleased
 
+  Changed c.p.CoGroup "repeat" parameter to numSelfJoins to respresent the actual number of self joins to be performed.
+  Thus a value of 1, will cause a single self join of a pipe. Users will need to decrement the current value by 1.
+
   Fixed bug with temporary filename generation where path created was too long.
 
   Fixed Janino c.o.expression operations to require parameter names and types. Janino
@@ -50,7 +53,7 @@ unreleased
 
   Updated c.o.Debug to allow for printing field names and tuple values in intervals.
 
-  Updated c.o.Debug to allow for printing field names and tuple values in intervals. 
+  Updated c.o.Debug to allow for printing field names and tuple values in intervals.
 
   Changed planner to fail if traps are not contained within single Map or Reduce tasks. This prevents the chance of
   multiple tasks writing to the same output location. Hadoop only partially supports appends, so it is not currently
